fixed header on top, stretches full window width

--- a/app/assets/stylesheets/components/header.sass
+++ b/app/assets/stylesheets/components/header.sass
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Modak')
+
 header.page-head
+  position: fixed
   width: 100%
   height: 40px
 
