--- a/app/assets/stylesheets/components/messages.sass
+++ b/app/assets/stylesheets/components/messages.sass
@@ -1,3 +1,3 @@
 #app-messages 
   width: 60%
-  margin: 16px auto
+  margin: 74px auto 34px auto
